@@ -46,7 +46,7 @@ Color depth of the X display\&. In TrueColor mode (24 or 32 bits per pixel) you 
 \fB-c, --command \fICOMMAND\fR\fR
 Execute the given command and exit\&. This was intended to create a sort of batch mode\&. Currently only one command is implemented\&. In the future this option will probably be replaced by a lightweight tool to control Zapping remotely\&. The \fBset_channel\fR command allows to change the channel by giving the channel name or RF channel number, for example:
 
-zapping -c="set_channel BBC"
+zapping -c "set_channel BBC"
 
 .TP
 \fB--console-errors\fR
