@@ -1,3 +1,7 @@
+2003-12-17    <mschimek@users.sf.net>
+
+	* src/vdr.c (vdr_open): Error messages only with -d option.
+
 2003-12-16    <mschimek@users.sf.net>
 
 	* help/man/zapping.xml, help/man/zapping_setup_fb.xml: Added.
